--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
-
 		<title>JANGS MÜLLER TYPE FOUNDRY</title>
+    	<meta charset="utf-8">
+    	<meta name="description" content="Type foundry">
+    	<meta name="keywords" content="HTML,CSS,Portfolio,Art,Graphic,Design">
+    	<meta name="author" content="Ji Park">
+
+		
 
 		<!-- external CSS link -->
 
@@ -143,7 +145,7 @@
 							<div class="control">
 									<div class="size">
 											<ul>
-												<li class="regular">Regular</li>
+												<li class="regular" data-weight="regular">Regular</li>
 												<li class="regularItalic">Regular Italic</li>
 												<li class="bold">Bold</li>
 												<li class="book">Book</li>
