--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
 									<div class="size">
 											<ul>
 												<li id="knedgelight" alt="knedge">Light</li>
-												<li id="knedgelight_italic" alt="knedge"  >Light Italic</li>
+												<li id="knedgelight_italic" alt="knedge"  >Light italic</li>
 												<li id="knedgeegular" alt="knedge" >Regular</li>
-												<li id="knedgeregular_italic" alt="knedge" >Regular Italic</li>
+												<li id="knedgeregular_italic" alt="knedge" >Regular italic</li> 
 												<li id="knedgebold" alt="knedge">Bold</li>
-												<li id="knedgebold_italic" alt="knedge">Bold Italic</li>
+												<li id="knedgebold_italic" alt="knedge">Bold italic</li>
 												<li id="knedgebook" alt="knedge">Book</li>
 												<li id="knedgeheavy" alt="knedge">Heavy</li>
-												<li id="knedgeheavy_italic" alt="knedge">Heavy Italic</li>
+												<li id="knedgeheavy_italic" alt="knedge">Heavy italic</li>
 												<li id="knedgeheavy_condensed" alt="knedge">Heavy Condensed</li>
 											</ul>
 									</div>
